<resources>
    <string name="app_name">Potholes+</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="title_activity_home2" translatable="false">Home2Activity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="home_second" translatable="false">Home Second</string>
    <string name="label_google_sign_in" translatable="false">Firebase + Google Sign In</string>
    <string name="label_facebook_login" translatable="false">Firebase + Facebook Login</string>
    <string name="label_twitter_login" translatable="false">Firebase + Twitter Login</string>
    <string name="label_emailpassword" translatable="false">Email/Password Authentication</string>
    <string name="label_anonymous_auth" translatable="false">Anonymous Authentication</string>
    <string name="label_phone_auth" translatable="false">Phone Authentication</string>
    <string name="label_manage_user" translatable="false">Manage User</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="sign_out" translatable="false">Sign Out</string>
    <string name="disconnect" translatable="false">Disconnect</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="signed_out" translatable="false">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_photo" translatable="false">Photo URL</string>
    <string name="anonymous_signin" translatable="false">Anonymous Sign In</string>
    <string name="account_link" translatable="false">Account Linking</string>
    <string name="account_link_btn" translatable="false">Link Account</string>
    <string name="title_provider" translatable="false">User\'s provider</string>
    <string name="title_profile" translatable="false">User\'s profile</string>
    <string name="title_update_profile" translatable="false">Update user\'s profile</string>
    <string name="title_update_email" translatable="false">Update user\'s email</string>
    <string name="title_update_password" translatable="false">Update user\'s password</string>
    <string name="title_send_password_reset" translatable="false">Send password reset</string>
    <string name="title_delete_user" translatable="false">Delete a user</string>
    <string name="updated" translatable="false">%s updated.</string>
    <string name="verify" translatable="false">Verify</string>
    <string name="start_phone_auth" translatable="false">Start</string>
    <string name="verify_phone_auth" translatable="false">Verify</string>
    <string name="resend_phone_auth" translatable="false">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code" translatable="false">Verification Code</string>
    <string name="status_verification_succeeded" translatable="false">Verification succeeded</string>
    <string name="status_sign_in_failed" translatable="false">Sign-in failed</string>
    <string name="instant_validation" translatable="false">(instant validation)</string>
    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="title_activity_chats2" translatable="false">MainActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="map_key" translatable="false">AIzaSyCtZ3HAm8-sy0U15dXluGN0Fa84IZyXs4g</string>
    <string name="map_view">Map view</string>
    <string name="report_potholes_using_a_trip">Report potholes using a trip</string>
    <string name="chats">Chats</string>
    <string name="history">History</string>
    <string name="insider_program">Insider Program</string>
    <string name="contact_us">Contact us</string>
    <string name="pothole_team">Pothole+ Team</string>
    <string name="report_status">Report Status:</string>
    <string name="image">Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="landmark">Landmark</string>
    <string name="address">Address</string>
    <string name="dimensions">Dimensions</string>
    <string name="comments">Comments</string>
    <string name="back">Back</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_user_sign_up">New User? Sign up</string>
    <string name="don_t_worry">Don\'t worry!</string>
    <string name="we_d_like_to_know_more_about_you">We\'d like to know more about you.</string>
    <string name="name1">Name</string>
    <string name="username1">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="potholes_reported">Potholes Reported</string>
    <string name="potholes_fixed">Potholes Fixed</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email2">Email</string>
    <string name="update_changes">Update changes</string>
    <string name="welcome">Welcome</string>
    <string name="register_to_make_india_great_again">Register to make India great again</string>
    <string name="email3">Email</string>
    <string name="password3">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="take_image_of_pothole">Take image of pothole</string>
    <string name="upload_image">Upload Image:</string>
    <string name="camera">Camera |</string>
    <string name="remove_image1">Remove Image</string>
    <string name="gallery">Gallery</string>
    <string name="severity_of_pothole">Severity of Pothole</string>
    <string name="landmark1">Landmark</string>
    <string name="address1">Address</string>
    <string name="location1">Location</string>
    <string name="tap_here_to_modify">Tap here to Modify</string>
    <string name="dimensions_optional">Dimensions (Optional)</string>
    <string name="comments_optional">Comments (Optional)</string>
    <string name="is_this_the_right_number_to_contact_you">Is this the right number to contact you?</string>
    <string name="we_are_always_with_you">We are always with you...</string>
    <string name="submit1">Submit</string>
    <string name="email4">Email</string>
    <string name="potholes">Potholes+</string>
    <string name="upload_video">Upload Video</string>
    <string name="your_current_status">Your current Status</string>
    <string name="display_name">Display Name</string>
    <string name="send_request">Send Request</string>
    <string name="decline_request">Decline Request</string>
    <string name="please_enter_your_e_mail_to_continue">Please enter your E-mail to continue</string>
    <string name="choose_from_below">Choose from below</string>
    <string name="about_us">About us</string>
    <string name="help">Help</string>
    <string name="type_of_pothole">Type of Pothole</string>
    <string name="we_care_beyond_health">We care beyond health</string>
    <string name="chat_profile_settings">Chat Profile Settings</string>
    <string name="civil_agencies">Civil Agencies</string>
    <string name="communication">Communication</string>
    <string name="elected_representatives">Elected Representatives</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="logout">Logout</string>
    <string name="Connections">Connections</string>
    <string name="Requests">Requests</string>
    <string name="Messages">Messages</string>
    <string name="total_connections">Total Connections:</string>
    <string name="done">Done</string>
    <string name="done8">Done</string>
    <string name="done6">Done</string>
    <string name="hello_blank_fragment">Detecting motion</string>
    <string name="menu_about">About</string>
    <string name="menu_credits">Credits</string>
    <string name="dialog_question">Would you like to start a trip?</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="not_detecting">Press on the toggle to start your trip</string>
    <string name="uploading">Uploading latest file ....</string>
    <string name="detecting">Detecting potholes. Drive safe.</string>
    <string name="menu_login">Login</string>
    <string name="menu_partners">Partners</string>
    <string name="warnings">We are currently facing issues in detecting potholes in bumper to bumper and slow moving traffic\n
        Please bear with us while this is improved\n\n
        Please clamp the device on a mobile holder for the best accuracy</string>
    <string name="about1">Potholes are a major source of a lot of problems we see on Indian roads. Slow moving traffic, lower mileage, high maintenance
        and injuries, all of these issues are linked to potholes and poor roads.
    </string>
    <string name="about2">Because this problem exists everywhere and happens all through the year, the government cannot fix everything efficiently.
        Citizens must take action sometimes. In fact, some students have found ways to fix small potholes. The data collected here can help use identify areas where we can take action without government intervention
        \n\nWe want to enable everyone in taking small steps to collectively help solve this big problem.
        \n\nSolve small, dent big!
    </string>
    <string name="about3">Turn on the app, drive and contribute. It\'s that simple.</string>
    <string name="title_activity_maps">Map</string>
    <string name="icons_home"><a href="https://icons8.com/web-app/5572/Home">Home icon credits</a></string>
    <string name="icons_settings"><a href="https://icons8.com/web-app/5590/Settings">Settings icon credits</a></string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="trips">All your trips</string>
    <string name="low">Lower Value</string>
    <string name="up">Upper Value</string>
    <string name="Thresholds">Thresholds</string>
    <string name="add_car">Please add a car</string>
    <string name="edit_high">Edit High</string>
    <string name="edit_low">Edit Low</string>
    <string name="submit">Submit</string>
    <string name="carname">Car Name</string>
    <string name="carmodel">Car Model</string>
    <string-array name="debugging_ids">
        <item></item> 
        <item></item> 
    </string-array>
</resources>