<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherComplaintsActivity"
    android:orientation="vertical">

    <include
        layout="@layout/action_bar"
        android:id="@+id/action_bar"/>

    <LinearLayout
        android:padding="15dp"
        android:layout_below="@id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pothole_image_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Take image"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:id="@+id/pothole_image_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#EBECEB"/>

            <ImageView
                android:id="@+id/pothole_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@null"/>

            <LinearLayout
                android:id="@+id/upload_image_hint_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_image"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:src="@drawable/ic_menu_camera"
                    android:alpha="0.5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:src="@drawable/ic_menu_gallery"
                    android:alpha="0.5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/pothole_remove_image_button"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/remove_image"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/pothole_location_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/location"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/map_card_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="10dp">

            <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/google_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>

            <Button
                android:id="@+id/map_location_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tap_here_to_modify"
                android:layout_gravity="bottom" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                android:id="@+id/potholes_comments_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/comments_optional">

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="14sp"
                    android:drawablePadding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:drawableStart="@drawable/ic_round_message_24"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_gravity="center_vertical"
                android:elevation="25dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:background="#F7F7F7"
                    android:padding="10dp"
                    android:id="@+id/btn_record"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_google_mic" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            android:layout_marginBottom="20dp">

            <Button
                android:textSize="15sp"
                android:id="@+id/p_button_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/done"
                android:textAllCaps="false"/>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</RelativeLayout>